# Six-Axis-Manipulator

./: .gitignore  INSTALLATION.md  Modified_VLA_Tutor_Prompt.md  QUICK_START.py  README.md  TRAINING_GUIDE.md  action_transformer.py  automated_data_collection.py  create_training_package.sh  data_collection_gui.py  launch_automated_collection.sh  launch_data_collection.sh  launch_gui.sh  launch_rviz_sync.sh  prepare_training_data.py  robot_controller.py  robot_state_publisher_node.py  run_finetuning.sh  saved_positions.json  servo_limits_config.py  setup.sh  test_cam.py  test_integration.sh  test_position_reading.py  train_openvla.py
SCServo_Linux_220329/SCServo_Linux/: SCServo.h
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/: README.md  README_PROGRAMS.md  README_SMOOTH_TEACH.md  build_all.sh  scan_servo_ids.sh
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/CalibrateCamera/: CMakeLists.txt  CalibrateCamera.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/FeedBack/: CMakeLists.txt
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/HomeAll/: HomeAll.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/ManualControl/: CMakeLists.txt  ManualControl.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/ReachObject/: ReachObject.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/TeachMode/: TeachMode.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/Test/: test.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/TestAlignment/: CMakeLists.txt  TestAlignment.cpp
SCServo_Linux_220329/SCServo_Linux/examples/ST3215_Control/WritePos/: CMakeLists.txt
calibration/: robot_calibration.py  simple_calibration.py  visualize_calibration.py
examples/: leader_follower.py  test_shapes.py
kinematics/: forward_kinematics_2link.py  forward_kinematics_6dof.py  transformations.py  visualizer_2link.py  visualizer_6dof.py
lerobot_integration/: README.md  requirements.txt
lerobot_integration/robots/kikobot/: __init__.py  config_kikobot.py  kikobot_follower.py  kikobot_leader.py
lerobot_integration/scripts/: examples.py  record_dataset.py  teleoperate_kikobot.py
utilities/: check_servos.py  scan_and_change_servo_ids.py  servo_control_gui.py
